--- a/src/components/NoteList.css
+++ b/src/components/NoteList.css
@@ -9,11 +9,13 @@
 
 .note-list li > * > * {
   width: 100%;
-  margin-inline: 0.3rem;
-  padding-inline: 0.3rem;
+  margin-inline: 0.3rem 0;
+  padding-inline: 0.3rem 0.1rem;
   padding-block: 0.2rem;
-  /* padding: 0 0.625rem; */
   border-radius: 0.4em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .note-list li > * > *:hover {
