--- a/src/global.css
+++ b/src/global.css
@@ -19,3 +19,7 @@ body {
 code {
   font-family: Monaco, Consolas, "Courier New", monospace;
 }
+
+*:focus-visible {
+  z-index: 1000;
+}
